fix: hide html/body scrollbars caused by svelte transition animations

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,11 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+html,
+body {
+	overflow: hidden;
+}
+
 .justify-center-safe {
 	justify-content: safe center;
 }
